--- a/css/nav.css
+++ b/css/nav.css
@@ -20,7 +20,8 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: 10px 55px;
+    padding-right: 70px;
 }
 
 .logo img {
@@ -47,7 +48,8 @@ nav{
   }
 
   .nav-links li {
-    margin: 0 18px;
+    margin: 0 1rem;
+    padding-right: 40px;
   }
 
   .nav-links a {
