--- a/css/footer.css
+++ b/css/footer.css
@@ -13,6 +13,7 @@
 
 /* footer styling */
 footer {
+    font-family: Arial, sans-serif;
     background-color: var(--primary-color);
     color: var(--text-color);
     padding: 40px 20px;
@@ -81,3 +82,5 @@ hr {
     width: 65%;
     padding-top: 0;
 }
+
+
