--- a/css/index.css
+++ b/css/index.css
@@ -76,3 +76,84 @@
     color: #052049; /* Omvend farve ved hover */
     transition: background-color 0.3s ease, color 0.3s ease; /* Glidende overgang */
 }
+
+
+
+/* infobokse */
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    color: var(--primary-color);
+   
+}
+
+.infobox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 40px;
+    background-color: var(--primary-color);
+    line-height: 1.6;
+}
+
+.box {
+    background-color: var(--secondary-color);
+    padding: 20px;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.box:hover {
+    transform: scale(1.05);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.box h3 {
+    color: var(--primary-color);
+    font-size: 1.5rem;
+    margin-top: 10px;
+}
+
+.box p {
+    font-size: 1rem;
+    color: var(--primary-color);
+    margin-top: 10px;
+    line-height: 1.4;
+}
+
+.box figure {
+    margin: 0;
+}
+
+.box .icon {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 10px;
+    transition: transform 0.3s ease;
+}
+
+.box .icon:hover {
+    transform: scale(1.2);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+html, body {
+    height: 100%;
+}
+
+footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 0px;
+}
