--- a/css/billet-shop.css
+++ b/css/billet-shop.css
@@ -66,8 +66,8 @@ padding-top: 40px;
 }
 
 .velkommen h1 {
-    padding-bottom: 30px;
-    font-size: 2em;
+padding-bottom: 30px;
+font-size: 2em;
 }
 
 .velkommen p {
@@ -75,4 +75,87 @@ font-size: 1.2em;
 max-width: 700px;
 margin: 0 auto;
 line-height: 1.6;
+}
+
+
+/* husk */
+
+
+
+
+
+
+
+
+
+
+
+
+/* Styling af section */
+.køb-plakat {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    flex-wrap: wrap;
+    font-family: Arial, sans-serif; 
+    border: 50px solid var(--primary-color);
+    background-color: var(--accent-color);
+    padding: 40px; 
+    margin: 0;
+    box-sizing: border-box;
+
+}
+
+/* Styling af article */
+.køb {
+    background-color: #441b71;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    width: 250px;
+    
+}
+
+/* Pris */
+.køb h2 {
+    font-size: 2em;
+    margin: 0 0 10px 0;
+    color: white;
+}
+
+/* Styling af figure */
+.plakat {
+    margin: 0;
+}
+
+.plakat img {
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid #3a105d;
+}
+
+/* Produktbeskrivelse */
+.køb p {
+    font-size: 16px;
+    margin: 10px 0;
+    color: white;
+}
+
+/* KØB knap */
+button.kob {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button.kob:hover {
+    background-color: #ff60b5; /* Skift farve ved hover */
+    color: #052049; /* Omvend farve ved hover */
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
