--- a/css/events.css
+++ b/css/events.css
@@ -189,6 +189,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 10;
     width: 150px;
+    cursor: pointer;
 }
 
 .dag:hover .begivenhed-info {
