--- a/css/medlem.css
+++ b/css/medlem.css
@@ -261,4 +261,53 @@ font-size: 2em;
 }
 
 
+/* Mobil (max-width: 600px) */
+@media (max-width: 600px) {
+    .form {
+        flex-direction: column; 
+    }
+
+    .form-sektion {
+        flex-direction: column; 
+        align-items: stretch; 
+    }
+
+    .header h2 {
+        font-size: 1.5em; 
+    }
+
+    fieldset input, 
+    fieldset select {
+        max-width: 100%; 
+    }
+
+    .bekræft-knap {
+        font-size: 1rem; 
+    }
+}
+
+/* Tablet (max-width: 768px) */
+@media (max-width: 768px) {
+    .form {
+        flex-direction: column;
+    }
+
+    .form-sektion {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .header h2 {
+        font-size: 1.8em; 
+    }
+
+    fieldset input, 
+    fieldset select {
+        max-width: 100%; 
+    }
+
+    .bekræft-knap {
+        font-size: 1.05rem;
+    }
+}
 
